<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/credits_orange"
    android:orientation="vertical">

    <RatingBar
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="80dp"
        android:paddingBottom="20dp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:text="@string/creator"
        android:textSize="24sp" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:gravity="center_horizontal"
        android:onClick="checkTheCode"
        android:text="@string/check_code"
        android:textColor="@color/gold"
        android:textSize="24sp"
        android:textStyle="bold" />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:gravity="center_horizontal"
        android:text="@string/have_fun"
        android:textSize="24sp" />

    <RatingBar
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:paddingTop="30dp"
        android:paddingBottom="20dp" />

    <Button
        android:layout_width="match_parent"
        android:layout_height="60dp"
        android:layout_gravity="center_horizontal"
        android:background="@drawable/background_main"
        android:gravity="center_horizontal"
        android:onClick="backToMainMenu"
        android:padding="10dp"
        android:text="@string/go_back_to_main_menu"
        android:textColor="@color/options_white"
        android:layout_marginStart="90dp"
        android:layout_marginEnd="90dp"/>

</LinearLayout>