<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:id="@+id/correctSetLinearLayout"
    android:layout_width="match_parent"
    android:layout_height="200dp"
    android:background="@color/colorPrimary"
    android:orientation="vertical">

    <TextView
        android:id="@+id/title_dialog_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="10sp"
        android:text="@string/you_lost"
        android:textSize="36sp" />

    <TextView
        android:id="@+id/message_dialog_text_view"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:text="@string/the_correct_set_was"
        android:textSize="24sp" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/first_correct_ball_image_view"
            android:layout_width="0dp"
            android:layout_height="80dp"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp"
            android:layout_weight="1"
            android:contentDescription="@string/empty_slot_description"
            android:src="@drawable/empty_circle_golden" />

        <ImageView
            android:id="@+id/second_correct_ball_image_view"
            android:layout_width="0dp"
            android:layout_height="80dp"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp"
            android:layout_weight="1"
            android:contentDescription="@string/empty_slot_description"
            android:src="@drawable/empty_circle_golden" />

        <ImageView
            android:id="@+id/third_correct_ball_image_view"
            android:layout_width="0dp"
            android:layout_height="80dp"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp"
            android:layout_weight="1"
            android:contentDescription="@string/empty_slot_description"
            android:src="@drawable/empty_circle_golden" />

        <ImageView
            android:id="@+id/fourth_correct_ball_image_view"
            android:layout_width="0dp"
            android:layout_height="80dp"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp"
            android:layout_weight="1"
            android:contentDescription="@string/empty_slot_description"
            android:src="@drawable/empty_circle_golden" />
    </LinearLayout>
</LinearLayout>