<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/margin_color">

    <ScrollView
        android:id="@+id/scroll_view"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintEnd_toStartOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintBottom_toTopOf="@+id/balls_linear_layout"
        app:layout_constraintTop_toTopOf="parent">

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/recycler_view"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            tools:itemCount="1"
            tools:listitem="@layout/single_turn" />
    </ScrollView>

    <LinearLayout
        android:id="@+id/balls_linear_layout"
        android:layout_width="match_parent"
        android:layout_height="69dp"
        android:background="@drawable/background_balls_linear_layout"
        android:orientation="horizontal"
        app:layout_constraintBottom_toTopOf="@id/buttons_linear_layout">

        <ImageView
            android:id="@+id/blue_ball"
            android:layout_width="69dp"
            android:layout_height="match_parent"
            android:src="@drawable/ball_blue"
            android:contentDescription="@string/ball_description" />

        <ImageView
            android:id="@+id/yellow_ball"
            android:layout_width="69dp"
            android:layout_height="match_parent"
            android:src="@drawable/ball_yellow"
            android:contentDescription="@string/ball_description" />

        <ImageView
            android:id="@+id/red_ball"
            android:layout_width="69dp"
            android:layout_height="match_parent"
            android:src="@drawable/ball_red"
            android:contentDescription="@string/ball_description" />

        <ImageView
            android:id="@+id/green_ball"
            android:layout_width="69dp"
            android:layout_height="match_parent"
            android:src="@drawable/ball_green"
            android:contentDescription="@string/ball_description" />

        <ImageView
            android:id="@+id/orange_ball"
            android:layout_width="69dp"
            android:layout_height="match_parent"
            android:src="@drawable/ball_orange"
            android:contentDescription="@string/ball_description" />

        <ImageView
            android:id="@+id/white_ball"
            android:layout_width="69dp"
            android:layout_height="match_parent"
            android:src="@drawable/ball_white"
            android:contentDescription="@string/ball_description" />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/buttons_linear_layout"
        android:layout_width="match_parent"
        android:layout_height="48dp"
        android:orientation="horizontal"
        app:layout_constraintBottom_toBottomOf="parent">

        <Button
            android:id="@+id/exit_button"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@color/colorPrimaryDark"
            android:text="@string/exit"
            android:onClick="backToMainMenu"
            android:textColor="@color/gold"
            android:textSize="24sp" />

        <TextView
            android:id="@+id/turns_text_view"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@color/colorPrimaryDark"
            android:gravity="center"
            android:text="@string/turns_left"
            android:textColor="@color/gold"
            android:textStyle="bold" />

        <Button
            android:id="@+id/restart_end_turn_button"
            android:layout_width="0dp"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:background="@color/colorPrimaryDark"
            android:text="@string/start"
            android:textColor="@color/gold"
            android:onClick="restartOrEndTurn"
            android:textSize="24sp" />
    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>